<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/single_category_activity"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.Category.SingleCategoryActivity">

    <TextView
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="" />

    <LinearLayout
        android:orientation="horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_horizontal"
        android:padding="6dp"
        android:weightSum="3">

        <Button
            android:id="@+id/single_category_go_back_button"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="Suspicious0dp"
            android:text="@string/go_back"

            android:layout_weight="1"/>

        <Button
            android:id="@+id/update_category_button"

            android:background="@color/orange"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="Suspicious0dp"
            android:text="@string/update_button_text"

            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_category_button"

            android:background="@color/red"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="Suspicious0dp"
            android:text="@string/delete_button_text"

            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>